--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -69,7 +69,7 @@
                         <tr>
                             <td align="center" style="padding: 30px 20px 20px 20px;">
                                 <a href="#VOTRE_SITE_WEB" target="_blank">
-                                    <img mc:image="header_image" src="https://via.placeholder.com/200x50.png?text=Votre+Logo" alt="Logo de votre entreprise" width="200" style="display: block; width: 200px;">
+                                    <img mc:image="header_image" src="https://i.imgur.com/KjEtVZy.png/200x50.png?text=Le fil d'Ariane" alt="Le fil d'Ariane" width="200" style="display: block; width: 200px;">
                                 </a>
                             </td>
                         </tr>
@@ -90,14 +90,6 @@
 
                         <tr>
                             <td class="footer" align="center" style="padding: 30px 20px; background-color: #eeeeee; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; font-family: Arial, sans-serif; font-size: 12px; line-height: 18px; color: #888888;">
-                                <p>
-                                    Copyright &copy; *|CURRENT_YEAR|* *|LIST:COMPANY|*, Tous droits réservés.<br>
-                                    *|LIST:DESCRIPTION|*
-                                </p>
-                                <p>
-                                    <strong>Notre adresse postale :</strong><br>
-                                    *|LIST:ADDRESS_LINE|*
-                                </p>
                                 <p>
                                     Vous ne souhaitez plus recevoir nos e-mails ? <a href="*|UNSUB|*">Vous pouvez vous désinscrire ici</a>.
                                 </p>
